# imac-cpp

./: .gitignore
td1/: CMakeLists.txt
td2/: CMakeLists.txt
td2/cuisine/: td02-cuisine.cpp
td2/exo1/: td02_ex01.cpp
td2/exo2/: td02_ex02.cpp
td2/exo3/: td02_ex03.cpp
td2/exo4/: td02_ex04.cpp
td2/exo5/: td02_ex05.cpp
td2/exo6/: td02_ex06.cpp
td2/src4/: td02_ex04.cpp
td3/: CMakeLists.txt
td3/exo1/: td03_ex01.cpp
td3/exo2/: td03_ex02.cpp
td3/exo3/: td03_ex03.cpp
td3/exo4/: td03_ex04.cpp
td3/exo5/: td03_ex05.cpp
td3/exo6/: td03_ex06.cpp
td3/exo7/: td03_ex07.cpp
td4/: CMakeLists.txt
td4/Luhn/: td04_Luhn.cpp
td4/exo1/: td04_ex01.cpp
td4/exo2/: td04_ex02.cpp
td4/exo3/: td04_ex03.cpp
td4/exo4/: td04_ex04.cpp
td4/exo5/: td04_ex05.cpp
td4/soldes/: td03_soldes.cpp
td5/: CMakeLists.txt
td5/Suite/: td05_suite.cpp
td5/exo1/: td05_ex01.cpp
td5/exo2/: td05_ex02.cpp
td5/exo3/: td05_ex03.cpp
td5/exo4/: td05_ex04.cpp
td5/exo5/: td05_ex05.cpp
td5/exo6/: td05_ex06.cpp
td6/: CMakeLists.txt
td6/exo1/: exo01.hpp
td6/exo2/: ex02.cpp
td7/: CMakeLists.txt
td7/exo1/: color.hpp  ex01.cpp
td7/exo2/: exo02.hpp
td8/: CMakeLists.txt
td8/exo1/: color.cpp  color_hex.cpp  color_hex.hpp  color_utils.cpp  color_utils.hpp  main.cpp
td9/: CMakeLists.txt
td9/exo1/: ex01.cpp
td9/exo2/: ex02.cpp
td9/exo3/: ex03.cpp
