cmake_minimum_required(VERSION 3.20)
set(CMAKE_CXX_STANDARD 17)

project(TD02)

file(GLOB_RECURSE EXO1 CONFIGURE_DEPENDS src1/*)
file(GLOB_RECURSE EXO2 CONFIGURE_DEPENDS src2/*)
file(GLOB_RECURSE EXO3 CONFIGURE_DEPENDS src3/*)
file(GLOB_RECURSE EXO4 CONFIGURE_DEPENDS src4/*)

add_executable(exo1 ${EXO1})
add_executable(exo2 ${EXO2})
add_executable(exo3 ${EXO3})
add_executable(exo4 ${EXO4})

set_target_properties(exo1 PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE})
set_target_properties(exo2 PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE})
set_target_properties(exo3 PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE})
set_target_properties(exo4 PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE})